--- a/CareerCounselling/Views/Home/About.cshtml
+++ b/CareerCounselling/Views/Home/About.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "About";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!DOCTYPE html>
 <!DOCTYPE html>
