--- a/CareerCounselling/Views/Shared/_Layout.cshtml
+++ b/CareerCounselling/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="../../assets/js/jquery.leanModal.min.js"></script>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
     <link type="text/css" rel="stylesheet" href="../../assets/css/loginStyle.css" />
+    <link type="text/css" rel="stylesheet" href="../../assets/css/logout.css" />
 </head>
 
 <body>
@@ -65,17 +66,48 @@
                                             <a href="@Url.Action("Services", "Home")">Services </a>
 
                                         </li>
-                                         <li>
+                                        <li>
                                             <a href="@Url.Action("Contactus", "Home")">Contact Us</a>
                                         </li>
                                         <li>
                                             <a href="@Url.Action("Experts", "Home")">Career Experts </a>
                                         </li>
                                     </ul>
-                                    <div class="loginb" id="userlogin">
+                                    <div class="loginb" id="userlogin" style="display:block">
                                         <a id="modal_trigger" href="#modal">Login </a>
                                     </div>
+                                    <script>
+                                        /* When the user clicks on the button,
+                                        toggle between hiding and showing the dropdown content */
+                                        function myFunction() {
+                                            document.getElementById("myDropdown").classList.toggle("show");
+                                        }
 
+                                        // Close the dropdown if the user clicks outside of it
+                                        window.onclick = function (event) {
+                                            if (!event.target.matches('.dropbtn')) {
+
+                                                var dropdowns = document.getElementsByClassName("dropdown1-content");
+                                                var i;
+                                                for (i = 0; i < dropdowns.length; i++) {
+                                                    var openDropdown = dropdowns[i];
+                                                    if (openDropdown.classList.contains('show')) {
+                                                        openDropdown.classList.remove('show');
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    </script>
+
+                                    <div class="dropdown1" id="userdropdown" style="display: none">
+                                        <button onclick="myFunction()" class="dropbtn">SujeetKumar<i class="fa fa-user-o" style="margin-left: 10px"></i></button>
+                                        <div id="myDropdown" class="dropdown1-content">
+                                            <a href="#home">My Profile</a>
+                                            <a href="#about">Special Access</a>
+                                            <a href="#contact">Change Password</a>
+                                            <a href="#contact">Logout</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
 
@@ -86,84 +118,7 @@
                 </div>
                 <!-- Login/register popup start here -->
                 <div id="modal" class="popupContainer" style="display: none;">
-                    <header class="popupHeader">
-                        <span class="header_title">Login</span>
-                        <span class="modal_close"><i class="fa fa-times"></i></span>
-                    </header>
-
-                    <section class="popupBody">
-                        <!-- Social Login -->
-                        <button class="loginBtn loginBtn--facebook">
-                            Login with Facebook
-                        </button>
-
-                        <button class="loginBtn loginBtn--google">
-                            Login with Google
-                        </button>
-
-                        <div class="centeredText">
-                            <span>-----Or use your Email address-----</span>
-                        </div>
-
-                        <!-- Username & Password Login form -->
-                        <div class="user_login">
-                            <form id="loginForm">
-                                <label>Email / Username</label>
-                                <input type="text" name="Username" id="logUser" />
-
-                                <label>Password</label>
-                                <input type="password" id="logPassword" name="Password" />
-
-                                <div class="action_btns">
-                                    @* <div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i>Back</a></div>*@
-                                    <div class="one_half last"><a href="#" class="btn btn_red" onclick="Login()">Login</a></div>
-                                </div>
-                            </form>
-                            <div class="signup">
-                                <a href="#" class="forgot_password">Forgot password?</a>
-                                <span>Don't have an account ? </span>
-                                <a href="#" id="register_form" class="">Sign up</a>
-                            </div>
-
-                        </div>
-
-
-                        <!-- Register Form -->
-                        <div class="user_register">
-
-                            <div id="message1">
-                                <div class="alert alert-success">
-                                    <span class="glyphicon glyphicon-ok"></span><strong>Success Message! Your Registration is completed</strong>
-                                </div>
-                            </div>
-                            <div id="message2">
-                                <div class="alert alert-danger">
-                                    <span class="glyphicon glyphicon-remove"></span><strong>Error Message! Your Reguistration is not completed</strong>
-                                </div>
-                            </div>
-                            <div id="message3">
-                                <div class="alert alert-danger">
-                                    <span class="glyphicon glyphicon-remove"></span><strong>User name already exists.</strong>
-                                </div>
-                            </div>
-
-                            <form id="Registration">
-                                <input type="text" name="FullName" id="Fullname" placeholder="Full Name" />
-                                <input type="email" name="EmailID" id="Email" placeholder="Email" />
-                                <input type="text" name="ContactNumber" id="Contactnumber" placeholder="Contact Number" />
-                                <input type="text" name="Username" id="User" placeholder="Username" />
-                                <input type="password" name="Password" id="Password" placeholder="Password" />
-
-                                <div class="action_btns">
-                                    <div class="one_half last"><a href="#" class="btn btn_red" onclick="SaveForm()">Register</a></div>
-                                </div>
-                            </form>
-                            <div class="haveaccount">
-                                <span>Please Click to</span>
-                                <a href="#" id="login_form" class="">Login</a>
-                            </div>
-                        </div>
-                    </section>
+                    @{Html.RenderPartial("Login");}
                 </div>
                 <!-- Login/Register End here -->
             </div>
@@ -246,8 +201,11 @@
                             $("#msg").show();
                         }
                         else {
-
-                            window.location.href = "@Url.Action("About", "Home")"; 
+                            var div = document.getElementById("userdropdown");
+                            var div1 = document.getElementById("userlogin");
+                            div1.style.display = "none";
+                            window.location.href = "@Url.Action("About", "Home")";
+                            div.style.display = "block";
                         }
 
                     }
@@ -385,7 +343,7 @@
         </div>
     </footer>
     <!--Footer Section End-->
-    
+
     <script type="text/javascript" src="../../assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="../../assets/js/tether.min.js"></script>
     <script type="text/javascript" src="../../assets/js/bootstrap.min.js"></script>
